TAG: qcreports_db-4-1-1-3
DATE: 07/23/2008
STAFF: lec
CHANGES:
1) TR9163; GXD_Images.py

TAG: qcreports_db-4-1-1-2
DATE: 07/09/2008
STAFF: lec
CHANGES:
TR 8945
1) MRK_AllNoGO.py
2) MRK_GOIEA.py
3) MRK_GOGold
4) MRK_GOAllele.py
5) MRK_NoGO.py
6) MRK_RatNOGO.sql
7) MRK_GOUnknown.sql
8) VOC_GODups.sql
9) GO_NotGene.sql
10) MRK_GORCA.py
11) GO_gp2protein_SWP_TR.py

TAG: qcreports_db-4-1-1-1
DATE: 07/09/2008
STAFF: dbm
CHANGES:
1) Merged TR9088 branch to trunk
2) Added links to qcr.html for EMAGE, GEO and GENSAT loads

TAG: qcreports_db-tr9088-BP
DATE: 07/07/2008
STAFF: dbm
CHANGES:
1) Branch point tag for TR9088 (GXD release)

TAG: qcreports_db-4-1-0-1
DATE: 06/16/2008
STAFF: dbm
CHANGES:
1) TR9063; Use new mount point for EILOGFILES setting

TAG: qcreports_db-4-0-2-9
DATE: 05/29/2008
STAFF: lec
CHANGES:
1) TR9042; GXD_ImageCheck.sql
2) TR9043; RECOMB_NotInCache.sql

TAG: qcreports_db-4-0-2-8
TAG: qcreports_db-4-0-2-7
TAG: qcreports_db-4-0-2-6
TAG: qcreports_db-4-0-2-5
DATE: 05/20/2008
STAFF: lec
CHANGES:
1) GXD_Status.py; removed some unnecessary image reports
2) TR8961; add this check to the GXD_ImageCheck.sql
3) fixes for 4.B (4.02)

TAG: qcreports_db-4-0-2-4
TAG: qcreports_db-4-0-2-3
TAG: qcreports_db-4-0-2-2
TAG: qcreports_db-4-0-2-1
DATE: 05/15/2008
DATE: 05/13/2008
STAFF: lec
CHANGES:
1) Merged TR8747 branch to trunk
2) added TR8966/prelimary Build 37 QC reports

TAG: qcreports_db-tr8528-BP
DATE: 04/27/2008
STAFF: sc
CHANGES:
1) branch point tag for TR8528 (B37)

TAG: qcreports_db-tr8747-4
TAG: qcreports_db-tr8747-3
TAG: qcreports_db-tr8747-2
TAG: qcreports_db-tr8747-1
DATE: 05/06/2008
DATE: 04/23/2008
STAFF: lec
CHANGES:
1) changes from strain type to strain attribute:
   PRB_Strain_SingleNoAlleles2.sql
   PRB_StrainTrans.sql
   PRB_StrainF1F2.sql
   PRB_StrainDup.sql
   PRB_Strain_SingleNoAlleles1.sql
   PRB_Strain_MultNoAlleles.sql
   PRB_StrainByDate.sql
2) GXD and Recombinase reports (TR8775)
3) TR 8984, GXD_Images

TAG: qcreports_db-tr8747
DATE: 04/23/2008